syntax = "proto3";

import "validate/validate.proto";

option go_package = "./pbaddress";

package address;

service Addresses{
  rpc CreateAddress (CreateAddressRequest) returns (CreateAddressResponse) {}
  rpc RetrieveAddress (RetrieveAddressRequest) returns (Address) {}
  rpc RetrieveMyAddresses (RetrieveMyAddressesRequest) returns (RetrieveMyAddressesResponse) {}
 
  rpc MeasureDistance (MeasureDistanceRequest) returns (MeasureDistanceResponse) {}
}

message Address {
  string country = 1;
  string province = 2;
  string zipcode = 3;
  string street = 4;
  uint64 number = 5;
  uint64 floor = 6;
  string department = 7;
  uint64 latitude = 8;
  uint64 longitude = 9;
  string alias = 10;
  uint64 user_id = 11;
}

message MeasureDistanceRequest {
  uint64 a_address_id = 1;
  uint64 b_address_id = 2;
}

message MeasureDistanceResponse {
  double manhattan_in_kilometers = 1;
  double haversine_in_kilometers = 2;
}

message CreateAddressRequest {
  string access_token = 1;
  Address body = 2;
}

message CreateAddressResponse {
  uint64 address_id = 1;
  Address metadata = 2;
}

message RetrieveAddressRequest {
  uint64 address_id = 1;
}

message RetrieveMyAddressesRequest{
  string access_token = 1;
}

message RetrieveMyAddressesResponse {
  map<uint64, Address> addresses = 1;
}

